--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,9 @@
+body {
+  background-color: rgb(241 245 249);
+  margin: 0;
+  font-family: Arial, sans-serif;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
